backend/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: backend-dev
    app.kubernetes.io/name: backend-dev
  name: backend-dev
