backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend-dev
  labels:
    role: backend
    env: demo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      role: backend
      app: demo
  template:
    metadata:
      labels:
        role: backend
        app: demo
    spec:
      containers:
      - name: backend
        image:  ahmedelsaeed/demo-backend-dev:70fb8a8
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /ok
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ok
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
