backend/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  ports:
  - port: 8080
    protocol: TCP
  type: ClusterIP
  selector:
    role: backend
